* NEW: Added the Web field to smart list, so no more need to use expressions. (Again backup your DB, this could result in a corrupted database if going back to an older version)
* NEW: Added an "Is Missing" smart list entry. (Again backup your DB, this could result in a corrupted database if going back to an older version)

* CHANGE: Updated to .NET Framework v4.8.
* CHANGE: Updated the Splash Screen and Renamed the Program to Community Edition, this means that a new config folder will be used %appdata%\cYo\ComicRack Community Edition. 
* CHANGE: Removed Android Validation of apk signature (so we can use the cracked version). Has no incidence on whether the sync icon appears.
* CHANGE: Updated default sort to be natural sorting (numeric).
* CHANGE: Switched MySQl library to MySQLConnector for better speed & compatibility with MariaDB (Yes current versions work).
* CHANGE: Alternate config (-ac) can now be used with portable mode (UseLocalSettings) (-local).
* CHANGE: Removed everything to do with Validation/Donation/PayPal.
* CHANGE: Removed everything to do with Twitter.
* CHANGE: Updated SharpZipLib to v1.4.2.
* CHANGE: Updated SharpCompress to v0.36.
* CHANGE: Updated WindowsCodePack to V1.15.
* CHANGE: Updated home & forum links to Github.
* CHANGE: Updated wiki links to the Wayback Machine.
* CHANGE: Updated the default help system to the online manual (from Wayback Machine).
* CHANGE: Updated manual links & chapter links.
* CHANGE: Updated Help localize ComicRack links (we still need access to the Localizer program).
* CHANGE: The default docking mode is now Fill, instead of Bottom.
* CHANGE: Improved performances while handling Tar files (by Apiweb).
* CHANGE: Removed the Crash submission dialog because it depended on the cyolito.com website.
* CHANGE: Disabled the Public server checkbox because it depended on the cyolito.com website.